# archive-tool

./: .gitignore  README.md  pyproject.toml
src/: cli.py  encryption.py  list.py  packer.py  unpacker.py
